<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:background="@color/textColor"
        android:gravity="bottom|end"
        android:textSize="30dp"
        android:text="@string/textNumber" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/buttonBackground"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="textInput"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btn7"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="textInput"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btn8"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="textInput"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btn9"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="operator"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btnDiv"
                tools:ignore="OnClick" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/buttonBackground"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="textInput"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btn4"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="textInput"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btn5"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="textInput"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btn6"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/buttonTimes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="operator"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btnTimes"
                tools:ignore="OnClick" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/buttonBackground"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="textInput"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btn1"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="textInput"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btn2"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="textInput"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btn3"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/buttonMin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="minus"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btnMin"
                tools:ignore="OnClick" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/buttonBackground"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="textInput"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btn0"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="dot"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btnDot"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/buttonClr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="clear"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btnClr"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="operator"
                android:backgroundTint="@color/btnColor"
                android:text="@string/btnPlus"
                tools:ignore="OnClick" />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/buttonBackground"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonEq"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="equal"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btnEq"
            tools:ignore="OnClick" />
    </LinearLayout>

</LinearLayout>